add logging, solve 'find player bug' and 'travel date bug', add user name in profile, Update system Config for edit post, update UI